// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature toggles test basic apis _changeRemoteFeatureValues 1`] = `
{
  "test/feature_a": false,
  "test/feature_b": 1,
  "test/feature_c": "best",
  "test/feature_d": true,
  "test/feature_e": 5,
  "test/feature_f": "best",
  "test/feature_g": "activeTest",
  "test/feature_h": "appUrlTest",
}
`;

exports[`feature toggles test basic apis _changeRemoteFeatureValues 2`] = `
{
  "test/feature_a": false,
  "test/feature_b": 1,
  "test/feature_c": "new_a",
  "test/feature_d": true,
  "test/feature_e": 5,
  "test/feature_f": "best",
  "test/feature_g": "activeTest",
  "test/feature_h": "appUrlTest",
}
`;

exports[`feature toggles test basic apis getFeatureStates 1`] = `
{
  "test/feature_a": {
    "config": {
      "appUrlActive": true,
      "fallbackValue": false,
      "type": "boolean",
      "validationRegExp": null,
    },
    "fallbackValue": false,
    "key": "test/feature_a",
    "stateValue": undefined,
  },
  "test/feature_b": {
    "config": {
      "appUrlActive": true,
      "fallbackValue": 1,
      "type": "number",
      "validationRegExp": null,
    },
    "fallbackValue": 1,
    "key": "test/feature_b",
    "stateValue": undefined,
  },
  "test/feature_c": {
    "config": {
      "appUrlActive": true,
      "fallbackValue": "best",
      "type": "string",
      "validationRegExp": null,
    },
    "fallbackValue": "best",
    "key": "test/feature_c",
    "stateValue": undefined,
  },
  "test/feature_d": {
    "config": {
      "appUrlActive": true,
      "fallbackValue": true,
      "type": "boolean",
      "validation": "^(?:true)$",
      "validationRegExp": /\\^\\(\\?:true\\)\\$/,
    },
    "fallbackValue": true,
    "key": "test/feature_d",
    "stateValue": undefined,
  },
  "test/feature_e": {
    "config": {
      "appUrlActive": true,
      "fallbackValue": 5,
      "type": "number",
      "validation": "^\\d{1}$",
      "validationRegExp": /\\^\\\\d\\{1\\}\\$/,
    },
    "fallbackValue": 5,
    "key": "test/feature_e",
    "stateValue": undefined,
  },
  "test/feature_f": {
    "config": {
      "appUrlActive": true,
      "fallbackValue": "best",
      "type": "string",
      "validation": "^(?:best|worst)$",
      "validationRegExp": /\\^\\(\\?:best\\|worst\\)\\$/,
    },
    "fallbackValue": "best",
    "key": "test/feature_f",
    "stateValue": undefined,
  },
  "test/feature_g": {
    "config": {
      "active": false,
      "appUrlActive": true,
      "fallbackValue": "activeTest",
      "type": "string",
      "validationRegExp": null,
    },
    "fallbackValue": "activeTest",
    "key": "test/feature_g",
    "stateValue": undefined,
  },
  "test/feature_h": {
    "config": {
      "appUrl": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "appUrlActive": true,
      "fallbackValue": "appUrlTest",
      "type": "string",
      "validationRegExp": null,
    },
    "fallbackValue": "appUrlTest",
    "key": "test/feature_h",
    "stateValue": undefined,
  },
}
`;

exports[`feature toggles test basic apis initializeFeatureToggles 1`] = `
{
  "test/feature_a": {
    "fallbackValue": false,
    "type": "boolean",
  },
  "test/feature_b": {
    "fallbackValue": 1,
    "type": "number",
  },
  "test/feature_c": {
    "fallbackValue": "best",
    "type": "string",
  },
  "test/feature_d": {
    "fallbackValue": true,
    "type": "boolean",
    "validation": "^(?:true)$",
  },
  "test/feature_e": {
    "fallbackValue": 5,
    "type": "number",
    "validation": "^\\d{1}$",
  },
  "test/feature_f": {
    "fallbackValue": "best",
    "type": "string",
    "validation": "^(?:best|worst)$",
  },
  "test/feature_g": {
    "active": false,
    "fallbackValue": "activeTest",
    "type": "string",
  },
  "test/feature_h": {
    "appUrl": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
    "fallbackValue": "appUrlTest",
    "type": "string",
  },
}
`;
